fix horizontal scroll

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -62,7 +62,7 @@ header {
 
 .nav {
   position: absolute;
-  right: 0px;
+  right: 20px;
   top: 60px;
   width: 450px;
   z-index: 100;
